# enpyre-play-backend

./: .dockerignore  .editorconfig  .env_example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  manage.py  mypy.ini  newrelic.ini  pyproject.toml  setup.cfg  sonar-project.properties  start.sh  start_celery.sh
.github/: pull_request_template.md
.github/workflows/: deploy.yml  redeploy.yml
enpyre_play/: asgi.py  celery.py  decorators.py  enums.py  envs.py  models.py  serializers.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
enpyre_play/projects/: admin.py  apps.py  constants.py  models.py  serializers.py  signals.py  urls.py  views.py
enpyre_play/quizzes/: admin.py  apps.py  enums.py  models.py  serializers.py  signals.py  urls.py  views.py
enpyre_play/scores/: admin.py  apps.py  enums.py  models.py  pagination.py  serializers.py  tasks.py  urls.py  utils.py  views.py
enpyre_play/settings/: __init__.py  application.py  auth.py  celery.py  database.py  docs.py  internationalization.py  security.py  sentry.py  static.py
enpyre_play/user/: apps.py  urls.py  views.py
enpyre_play/users/: admin.py  apps.py  models.py  serializers.py  social_pipeline.py  urls.py  utils.py  views.py
iac/: README.md  main.tf  variables.tf
scripts/: __init__.py  clean_db.py  populate_db.py  populate_project.py  populate_project_solution.py  populate_quizz.py  populate_quizz_answer.py  populate_quizz_question.py  populate_user.py
tests/: conftest.py  test_status.py
tests/mocks/: scores.py
tests/projects/: test_create_project_solution_viewset.py  test_create_project_viewset.py  test_delete_project_viewset.py  test_list_projects_viewset.py  test_retrieve_project_solution_view.py  test_retrieve_project_viewset.py  test_update_project_solution_view.py  test_update_project_viewset.py
tests/quizzes/: test_create_quizzes_viewset.py  test_delete_quizzes_viewset.py  test_list_quizzes_viewset.py  test_update_quizzes_viewset.py
tests/users/: test_users_profile.py
(+32 files in other folders)
